# ISP-project

./: .gitignore  README.md  audio_distortions.ipynb  human_inference.py  human_transcription.txt  inference.py  main.py  pyproject.toml  test.py
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
distorted_data/clipped/: 3536-23268-0002-0_9.flac  3536-23268-0002.flac  3536-23268-0012.flac  3536-23268-0013-0_7.flac  3536-23268-0013.flac  3536-23268-0026-0_3.flac  3536-23268-0026.flac  3536-23268-0028-0_1.flac  3536-23268-0028.flac  3536-8226-0001-0_7.flac  3536-8226-0001.flac  3536-8226-0004-0_5.flac  3536-8226-0004.flac  3536-8226-0007.flac  3536-8226-0013-0_1.flac  3536-8226-0013.flac  3536-8226-0020.flac  3536-8226-0021-0_3.flac  3536-8226-0021.flac  3536-8226-0022-0_5.flac  3536-8226-0022.flac  3536-8226-0027-0_7.flac  3536-8226-0029-0_1.flac  3536-8226-0029.flac  3536-8226-0031.flac  clipped_transcriptions.csv
distorted_data/downsampled/: 3536-23268-0000_14000.flac  3536-23268-0003_8000.flac  3536-23268-0004_12000.flac  3536-23268-0010_14000.flac  3536-23268-0011_7000.flac  3536-23268-0020_7000.flac  3536-23268-0024_10000.flac  3536-23268-0030_10000.flac  3536-8226-0008_8000.flac  3536-8226-0017_8000.flac  3536-8226-0018_14000.flac  3536-8226-0019_7000.flac  3536-8226-0023_12000.flac  3536-8226-0024_10000.flac  3536-8226-0026_12000.flac  downsampled_transcriptions.csv
distorted_data/normal/: normal_transcriptions.csv
human_transcription_csv/: clipped.csv  downsampled.csv  normal.csv  whitenoise.csv
(+16 files in other folders)
